selfhost/test/parser/import_error_list_bad_module.out
Error at %FILE_NAME%:1:18
Unexpected token 'int', expected 'string':
  |  import a, b from 123
                      ^